Заполнение списка реквизитов

--- a/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаВыбораФормы/Form.form
+++ b/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаВыбораФормы/Form.form
@@ -308,6 +308,10 @@
     <event>OnCreateAtServer</event>
     <name>ПриСозданииНаСервере</name>
   </handlers>
+  <handlers>
+    <event>OnOpen</event>
+    <name>ПриОткрытии</name>
+  </handlers>
   <autoTitle>true</autoTitle>
   <autoUrl>true</autoUrl>
   <group>Vertical</group>
@@ -373,6 +377,81 @@
         </edit>
       </columns>
     </additionalColumns>
+  </attributes>
+  <attributes>
+    <name>ФормаАнализируемая</name>
+    <title>
+      <key>ru</key>
+      <value>Форма анализируемая</value>
+    </title>
+    <id>4</id>
+    <valueType>
+      <types>String</types>
+      <stringQualifiers/>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+    <settingsSavedData xsi:type="form:DataPath">
+      <segments>ФормаАнализируемая</segments>
+    </settingsSavedData>
+  </attributes>
+  <attributes>
+    <name>ФормаИмяОбъекта</name>
+    <title>
+      <key>ru</key>
+      <value>Форма имя объекта</value>
+    </title>
+    <id>5</id>
+    <valueType>
+      <types>String</types>
+      <stringQualifiers/>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+  </attributes>
+  <attributes>
+    <name>ФормаИмяФормы</name>
+    <title>
+      <key>ru</key>
+      <value>Форма имя формы</value>
+    </title>
+    <id>6</id>
+    <valueType>
+      <types>String</types>
+      <stringQualifiers/>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+  </attributes>
+  <attributes>
+    <name>ФормаТипОбъекта</name>
+    <title>
+      <key>ru</key>
+      <value>Форма тип объекта</value>
+    </title>
+    <id>7</id>
+    <valueType>
+      <types>String</types>
+      <stringQualifiers/>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
   </attributes>
   <commandInterface>
     <navigationPanel/>
