--- a/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаКодогенерации/Form.form
+++ b/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаКодогенерации/Form.form
@@ -2711,6 +2711,7 @@
       </picture>
       <toolTipRepresentation>Balloon</toolTipRepresentation>
       <representationInContextMenu>Auto</representationInContextMenu>
+      <locationInCommandBar>InCommandBar</locationInCommandBar>
     </items>
     <items xsi:type="form:Button">
       <name>ВыбратьФормуДляАнализа</name>
@@ -2746,15 +2747,14 @@
       </picture>
       <toolTipRepresentation>Balloon</toolTipRepresentation>
       <representationInContextMenu>Auto</representationInContextMenu>
+      <locationInCommandBar>InCommandBar</locationInCommandBar>
     </items>
     <items xsi:type="form:Button">
       <name>ФормаСравнитьФормыУстановитьФлажки</name>
       <id>153</id>
       <visible>true</visible>
       <enabled>true</enabled>
-      <userVisible>
-        <common>true</common>
-      </userVisible>
+      <userVisible/>
       <extendedTooltip>
         <name>ФормаСравнитьФормыУстановитьФлажкиРасширеннаяПодсказка</name>
         <id>154</id>
