Добавлен реквизит хранения настроек реквизита формы "ТекстИзменения", текст настроек должен выводиться отдельно от блока изменения реквизитов. Например динамический список добавляется совместно с другими реквизитами, а затем уже настраивается в другом блоке текста.

--- a/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаКодогенерации/Form.form
+++ b/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаКодогенерации/Form.form
@@ -1099,6 +1099,56 @@
                   <textEdit>true</textEdit>
                 </extInfo>
               </items>
+              <items xsi:type="form:FormField">
+                <name>ОбъектДеревоРеквизитовТекстИзменения</name>
+                <id>190</id>
+                <visible>true</visible>
+                <enabled>true</enabled>
+                <userVisible>
+                  <common>true</common>
+                </userVisible>
+                <dataPath xsi:type="form:DataPath">
+                  <segments>Объект.ДеревоРеквизитов.ТекстИзменения</segments>
+                </dataPath>
+                <extendedTooltip>
+                  <name>ОбъектДеревоРеквизитовТекстИзмененияРасширеннаяПодсказка</name>
+                  <id>192</id>
+                  <visible>true</visible>
+                  <enabled>true</enabled>
+                  <userVisible>
+                    <common>true</common>
+                  </userVisible>
+                  <type>Label</type>
+                  <autoMaxWidth>true</autoMaxWidth>
+                  <autoMaxHeight>true</autoMaxHeight>
+                  <extInfo xsi:type="form:LabelDecorationExtInfo">
+                    <horizontalAlign>Left</horizontalAlign>
+                  </extInfo>
+                </extendedTooltip>
+                <contextMenu>
+                  <name>ОбъектДеревоРеквизитовТекстИзмененияКонтекстноеМеню</name>
+                  <id>191</id>
+                  <visible>true</visible>
+                  <enabled>true</enabled>
+                  <userVisible>
+                    <common>true</common>
+                  </userVisible>
+                  <autoFill>true</autoFill>
+                </contextMenu>
+                <type>InputField</type>
+                <editMode>Enter</editMode>
+                <showInHeader>true</showInHeader>
+                <headerHorizontalAlign>Left</headerHorizontalAlign>
+                <showInFooter>true</showInFooter>
+                <extInfo xsi:type="form:InputFieldExtInfo">
+                  <autoMaxWidth>true</autoMaxWidth>
+                  <autoMaxHeight>true</autoMaxHeight>
+                  <wrap>true</wrap>
+                  <chooseType>true</chooseType>
+                  <typeDomainEnabled>true</typeDomainEnabled>
+                  <textEdit>true</textEdit>
+                </extInfo>
+              </items>
               <commandBarLocation>None</commandBarLocation>
               <autoCommandBar>
                 <name>ОбъектДеревоРеквизитовКоманднаяПанель</name>
@@ -2956,6 +3006,24 @@
           <value>Текст создания</value>
         </title>
         <id>11</id>
+        <valueType>
+          <types>String</types>
+          <stringQualifiers/>
+        </valueType>
+        <view>
+          <common>true</common>
+        </view>
+        <edit>
+          <common>true</common>
+        </edit>
+      </columns>
+      <columns>
+        <name>ТекстИзменения</name>
+        <title>
+          <key>ru</key>
+          <value>Текст изменения</value>
+        </title>
+        <id>24</id>
         <valueType>
           <types>String</types>
           <stringQualifiers/>
